# mesop-simple-chat

./: .env  Makefile  Procfile  README.md  main.py  pyproject.toml  requirements.txt
components/standard/: chat_input.py  header.py
components/web/auth/: firebase_auth_component.js
components/web/rating/: rating_component.js  rating_component.py
data_model/: state.py
llm/: llm_flow.py  stream_local.py
utils/: mesop_common.py
